--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<link rel="stylesheet" href="style_mobile.css">
 <title>Tarjeta para Aracely 🌼</title>
 <style>
 :root{
