por fin supongo

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body{
 .wrap{
   width: min(95%, 760px);
   height: auto;
-  aspect-ratio: 3/2; /* mantiene proporción en escritorio */
+  aspect-ratio: 3/2;
   display:flex;
   align-items:center;
   justify-content:center;
@@ -102,31 +102,47 @@ body{
   transform: scale(1.05);
 }
 
-
+/* Ajustes para la sub-tarjeta interior */
 .card-inside{
   transform: rotateY(180deg);
   display:flex;
-  flex-direction:column;
-  justify-content:center;
-  align-items:center;
-  gap:0.8em;
+  flex-direction: column;
+  justify-content: flex-start; /* Alinea contenido al inicio */
+  align-items: center;
+  gap: 0.8em;
+  padding: 1em 1em 1.5em 1em;
+  overflow-y: auto; /* Permite scroll vertical */
+  box-sizing: border-box;
+  max-height: 100%;
 }
 
+.message, .text {
+  word-wrap: break-word;
+  max-width: 100%;
+  text-align: center;
+}
 
-.message{ font-size:clamp(1.1rem, 2.5vw, 1.5rem); color:#a06100; text-align:center }
-.text{ color:var(--text); font-size:clamp(0.9rem, 2vw, 1rem); line-height:1.5; text-align:center }
+.message {
+  font-size: clamp(1.1rem, 2.5vw, 1.5rem);
+  color: #a06100;
+}
 
+.text {
+  color: var(--text);
+  font-size: clamp(0.9rem, 2vw, 1rem);
+  line-height: 1.5;
+}
 
-.footer-emo{ margin-top:12px; font-size:clamp(1rem, 2vw, 1.3rem); color:var(--accent) }
-
-
+/* Ajuste para la imagen */
 .spongebob-img {
-  width: clamp(90px, 25vw, 140px);
+  max-width: 120px;
   height: auto;
   margin-top: 12px;
-  border-radius:12px;
+  border-radius: 12px;
   box-shadow: 0 6px 16px rgba(0,0,0,0.2);
 }
+
+.footer-emo{ margin-top:12px; font-size:clamp(1rem, 2vw, 1.3rem); color:var(--accent) }
 
 
 /* --- Popup --- */
@@ -170,24 +186,20 @@ body{
 .falling .petal.left{ left: -10px; transform: rotate(-15deg); }
 .falling .petal.right{ right: -10px; transform: rotate(15deg); }
 
-
-/* --- Sólo para teléfonos móviles con ancho máximo 480px --- */
-@media (max-width: 480px) {
-  body{ padding:0.5rem; }
-  .wrap{ width:100%; aspect-ratio:auto; height:auto; }
-  .card-front, .card-inside{ padding:0.8rem; }
-  .cover-title{ font-size:1.2rem; }
-  .cover-sub{ font-size:0.85rem; }
-  .message{ font-size:1rem; }
-  .text{ font-size:0.85rem; }
-  .spongebob-img{ width:90px; }
-  .open-btn, .btn-secret, .btn-music, .close-btn{ font-size:0.8rem; padding:0.6rem 1rem; }
+/* Mensaje para pantallas no móviles */
+#mobileOnlyMsg {
+  display: none;
+  font-family: "Segoe UI", Arial, sans-serif;
+  color: #a06100;
+  font-size: 1.2rem;
+  text-align: center;
+  padding: 2rem;
 }
-
-/* Se eliminaron otras media queries para tabletas o dispositivos más anchos */
 </style>
 </head>
 <body>
+<div id="mobileOnlyMsg">Esta tarjeta solo está disponible en teléfonos móviles.</div>
+
 <div class="wrap">
   <div class="card" id="card">
     <div class="card-front">
@@ -221,6 +233,22 @@ body{
 <audio id="song" src="02 Hans Zimmer - Spirit： Stallion of the Cimarron - Swimming.mp3" autoplay loop></audio>
 
 <script>
+function checkScreenWidth() {
+  const wrap = document.querySelector('.wrap');
+  const msg = document.getElementById('mobileOnlyMsg');
+  const maxMobileWidth = 480;
+  if(window.innerWidth <= maxMobileWidth){
+    wrap.style.display = "flex";
+    msg.style.display = "none";
+  } else {
+    wrap.style.display = "none";
+    msg.style.display = "block";
+  }
+}
+
+window.addEventListener('resize', checkScreenWidth);
+window.addEventListener('load', checkScreenWidth);
+
 const openBtn = document.getElementById('openBtn');
 const card = document.getElementById('card');
 const popupBtn = document.getElementById('popupBtn');
@@ -229,7 +257,6 @@ const closePopup = document.getElementById('closePopup');
 const musicBtn = document.getElementById('musicBtn');
 const song = document.getElementById('song');
 
-
 openBtn.addEventListener('click', () => {
   card.classList.add('open');
   openBtn.style.display = 'none';
@@ -237,18 +264,15 @@ openBtn.addEventListener('click', () => {
   musicBtn.textContent = "Pausar canción 🎵";
 });
 
-
 popupBtn.addEventListener('click', () => {
   popup.classList.add('show');
   if(!song.paused) { song.pause(); musicBtn.textContent = "Reproducir canción 🎵"; }
 });
 
-
 closePopup.addEventListener('click', () => {
   popup.classList.remove('show');
   if(song.paused){ song.play(); musicBtn.textContent = "Pausar canción 🎵"; }
 });
-
 
 document.addEventListener('keydown', (e) => {
   if(e.key==='Escape' && popup.classList.contains('show')){
@@ -257,12 +281,10 @@ document.addEventListener('keydown', (e) => {
   }
 });
 
-
 musicBtn.addEventListener('click', () => {
-  if(song.paused){ song.play(); musicBtn.textContent = "Pausar canción 🎵"; } 
+  if(song.paused){ song.play(); musicBtn.textContent = "Pausar canción 🎵"; }
   else { song.pause(); musicBtn.textContent = "Reproducir canción 🎵"; }
 });
-
 
 function createTulip() {
   const tulip = document.createElement("div");
