codigo acabado por fin

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ body{
 <div class="wrap">
   <div class="card" id="card">
     <div class="card-front">
-      <div class="cover-title">🌼 Para ti, Aracely 🌼</div>
+      <div class="cover-title">🌼 Para ti, Ara🌼</div>
       <div class="cover-sub">Una sorpresa dentro — abre la tarjeta</div>
       <button id="openBtn" class="open-btn">Abrir tarjeta ✨</button>
     </div>
